--- a/style.css
+++ b/style.css
@@ -89,22 +89,23 @@ nav ul li a {
 }
 
 .project-list {
-  display: flex;
-  gap: 30px;
-  justify-content: space-between;
+  display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
 }
 
 .project-item {
-  background-color: #fff;
-  padding: 20px;
+  background: #f9f9f9;
+  border: 1px solid #ddd;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 30%;
+  overflow: hidden;
+  padding: 20px;
   text-align: center;
 }
 
 .project-item img {
   max-width: 100%;
+  height: auto;
   border-radius: 8px;
 }
 
